Fix 100vh on ios

--- a/src/css/global/_reset.css
+++ b/src/css/global/_reset.css
@@ -35,6 +35,7 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
